<resources>
    <string name="app_name">Campus Event List</string>
    <string name="splash_title">Uni-T</string>
    <string name="splash_slogan">Powered by UniTech</string>
    
    <!-- Select School Screen Strings -->
    <string name="select_school_title">Select Your School</string>
    <string name="search_school_label">Search School</string>
    <string name="search_hint">Type to search…</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="loading_schools">Loading schools…</string>
    
    <!-- Upcoming Events Screen Strings -->
    <string name="upcoming_events_title">Upcoming Events</string>
    <string name="search_event_label">Search Event</string>
    <string name="search_event_hint">Type to search…</string>
    <string name="search_event_icon_desc">Search event icon</string>
    <string name="loading_events">Loading events…</string>
    <string name="back_button_desc">Back button</string>
    
    <!-- Error Screen Strings -->
    <string name="error_title">Error !</string>
    <string name="error_icon_desc">Error icon</string>
    <string name="selected_school_text">Your selected school:</string>
    <string name="not_enrolled_text">has not yet enrolled with Uni-T</string>
    <string name="error_explanation">Click below to send an automatic email to your schools administration, requesting them to join Uni-T !</string>
    <string name="send_request_button">Send Request for Enrolment</string>
    <string name="return_to_selection">Return to the School Selection Screen</string>
    
    <!-- Event Error Screen Strings -->
    <string name="selected_event_text">Your selected event:</string>
    <string name="event_not_available_text">is not available in Uni-T</string>

    <!-- Map Screen Strings -->
    <string name="google_maps_key">YOUR_GOOGLE_MAPS_API_KEY</string>
    <string name="permission_denied">Location Permissions Denied</string>
    <string name="fetch_location_error">Unable to fetch the location</string>
</resources>